--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
   ],
   "private": false,
   "scripts": {
-    "dev": "vite -c vite.examples.config.js",
     "build-lib": "tsc && vite build --emptyOutDir -c vite.lib.config.js",
-    "build-examples": "tsc && vite build --emptyOutDir -c vite.examples.config.js",
     "serve": "vite preview",
     "lint": "eslint --ext .js,.ts src",
     "build-dts": "dts-bundle-generator -o dist/lib/map-gl-indoor.d.ts src/index.ts",
-    "prepublishOnly": "npm run build-lib && npm run build-examples && npm run build-dts"
   },
   "repository": {
     "type": "git",
@@ -29,29 +26,18 @@
     "floors",
     "geojson",
     "map",
-    "mapbox",
-    "mapboxgl",
     "maplibre"
   ],
   "author": "Thibaud Michel",
   "license": "MIT",
-  "peerDependencies": {
-    "mapbox-gl": ">1.10.0"
-  },
   "devDependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^2.3.0",
     "@turf/centroid": "^6.5.0",
     "@types/geojson": "^7946.0.8",
-    "@types/mapbox__mapbox-gl-geocoder": "^4.7.2",
-    "@types/mapbox__point-geometry": "^0.1.2",
-    "@types/mapbox__vector-tile": "^1.3.0",
-    "@types/mapbox-gl": "^1.13.2",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "dts-bundle-generator": "^6.5.0",
     "eslint": "^8.11.0",
     "events": "^3.3.0",
-    "osmtogeojson": "^3.0.0-beta.5",
     "typescript": "^4.6.2",
     "vite": "^3.1.4"
   },
@@ -59,8 +45,7 @@
     "@turf/bbox": "^6.5.0",
     "@turf/destination": "^6.5.0",
     "@turf/distance": "^6.5.0",
-    "mapbox-gl": "^1.13.2",
-    "maplibre-gl": "^2.4.0"
+    "maplibre-gl": "4.5.1"
   },
   "exports": {
     ".": {
