--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,9 @@ Temporary Items
 !.vscode/launch.json
 !.vscode/extensions.json
 
+### IntelliJ ###
+.idea
+
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
