--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build-lib": "tsc && vite build --emptyOutDir -c vite.lib.config.js",
     "serve": "vite preview",
-    "lint": "eslint src && tsc --",
+    "lint": "eslint src && tsc --noEmit && prettier --write .",
     "build-dts": "dts-bundle-generator -o dist/lib/map-gl-indoor.d.ts src/index.ts"
   },
   "repository": {
@@ -40,6 +40,7 @@
     "dts-bundle-generator": "9.5.1",
     "eslint": "9.8.0",
     "events": "3.3.0",
+    "prettier": "3.3.3",
     "typescript": "5.5.4",
     "typescript-eslint": "^8.0.0",
     "vite": "5.3.5"
