--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "types": "dist/maplibre-gl-indoor.d.ts",
   "type": "module",
   "files": [
-    "dist"
+    "dist/*",
+    "src/"
   ],
-  "version": "0.0.2",
+  "version": "0.0.3",
   "scripts": {
     "lint": "eslint src && tsc --noEmit && prettier --write .",
     "build": "rm -fr dist && npm run build-lib && npm run build-dts",
@@ -49,11 +50,5 @@
     "@turf/destination": "7.0.0",
     "@turf/distance": "7.0.0",
     "maplibre-gl": "4.5.1"
-  },
-  "exports": {
-    "./dist": "./dist",
-    "./LICENSE": "./LICENSE",
-    "./package.json": "./package.json",
-    "./pnpm-lock.yaml": "./pnpm-lock.yaml"
   }
 }
