--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noImplicitAny": false,
-    "rootDir": "./src",
+    "rootDir": "./src"
   },
   "include": ["./src"]
 }
