--- a/example/package.json
+++ b/example/package.json
@@ -4,19 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "cd .. && npm run build && cd example && vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "3.4.31",
+    "vue": "3.4.35",
     "maplibre-gl": "4.5.1",
-    "maplibre-gl-indoor": "0.0.3"
+    "maplibre-gl-indoor": "workspace:../"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "5.0.5",
-    "typescript": "5.2.2",
-    "vite": "5.3.4",
-    "vue-tsc": "2.0.24"
+    "@vitejs/plugin-vue": "5.1.2",
+    "typescript": "5.5.4",
+    "vite": "5.3.5",
+    "vue-tsc": "2.0.29"
   }
 }
