--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "cd .. && npm run build-lib && cd example && vite",
-    "build": "vue-tsc -b && vite build",
+    "lint": "vue-tsc -b",
+    "build": "cd .. && npm run build && cd example && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
