--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dist/*",
     "src/"
   ],
-  "version": "0.0.4",
+  "version": "0.0.6",
   "scripts": {
     "lint": "eslint src --fix && tsc --noEmit && prettier --write .",
     "build": "rm -fr dist && npm run build-lib && npm run build-dts",
+    "prepublishOnly": "npm run build",
     "build-lib": "tsc && vite build --emptyOutDir -c vite.lib.config.js",
     "build-dts": "dts-bundle-generator -o dist/maplibre-gl-indoor.d.ts src/index.ts"
   },
