--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,24 @@ on:
   workflow_dispatch:
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node_version: [20, 22]
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node_version }}
+        uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 9.5.0
+          package_json_file: package.json
+          run_install: |
+            - args: [--frozen-lockfile, --strict-peer-dependencies]
+      - run: pnpm test
   build:
     runs-on: ubuntu-latest
 
