--- a/package.json
+++ b/package.json
@@ -34,21 +34,22 @@
   "author": "Thibaud Michel, modified by Frank Elsinga",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@types/eslint__js": "^8.42.3",
+    "@maplibre/maplibre-gl-style-spec": "20.3.1",
+    "@eslint/js": "9.8.0",
+    "@types/eslint__js": "8.42.3",
     "@types/geojson": "7946.0.14",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "29.5.12",
     "@typescript-eslint/eslint-plugin": "8.0.1",
     "@typescript-eslint/parser": "8.0.1",
     "dts-bundle-generator": "9.5.1",
     "eslint": "9.9.0",
     "eslint-plugin-perfectionist": "3.1.3",
     "events": "3.3.0",
-    "jest": "^29.7.0",
+    "jest": "29.7.0",
     "prettier": "3.3.3",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "29.2.5",
     "typescript": "5.5.4",
-    "typescript-eslint": "^8.0.0",
+    "typescript-eslint": "8.0.0",
     "vite": "5.4.0"
   },
   "dependencies": {
